--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_DOMAIN = "http://localhost:5000"
+REACT_APP_API_DOMAIN = "https://backend-kelompok4.vercel.app"
+
+// https://backend-kelompok4.vercel.app
