--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-REACT_APP_API_DOMAIN = "https://backend-kelompok4.vercel.app"
-
-// https://backend-kelompok4.vercel.app
+REACT_APP_API_DOMAIN = "https://backend-listify.vercel.app"
